--- a/Understanding Typescript - 2022 Edition (Udemy - Maximilian Schwarzmüller)/index.html
+++ b/Understanding Typescript - 2022 Edition (Udemy - Maximilian Schwarzmüller)/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Understanding Typescript - 2022 Edition (Udemy - Maximilian Schwarzmüller)</title>
+    <title>Understanding Typescript - 2022 Edition</title>
     <script src="./index.js" defer></script>
 </head>
 <body>
