Customize the Typescript course main file structure untill Section 7

--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <input type="number" id="number" placeholder="Number" />
+    <input type="text" id="user-input" placeholder="Name" />
     <button type="button" id="button">Add</button>
 </body>
 </html>
