Understanding TypeScript/Section 8 [Decorators]:[From L105 > L108]

--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -11,5 +11,6 @@
     <input type="number" id="number" placeholder="Number" />
     <input type="text" id="user-input" placeholder="Name" />
     <button type="button" id="button">Add</button>
+    <div id="app"></div>
 </body>
 </html>
