--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -11,6 +11,15 @@
     <input type="number" id="number" placeholder="Number" />
     <input type="text" id="user-input" placeholder="Name" />
     <button type="button" id="button">Add</button>
-    <div id="app"></div>
+    <div id="person1"></div>
+    <div id="person2"></div>
+    <button class="button1">Click Me Button1</button>
+    <button class="button2">Click Me Button2</button>
+
+    <form style="margin-top: 20px;">
+        <input type="text" id="title" placeholder="Title" />
+        <input type="number" id="price" placeholder="Number" />
+        <button type="submit" id="submit">Submit</button>
+    </form>
 </body>
 </html>
